--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -8,4 +8,8 @@
     <!-- Radio Info -->
     <string name="radio_info_title">Radio info</string>
 
+    <!-- Hardware info -->
+    <string name="platform_revision">Platform</string>
+    <string name="total_ram">Total RAM</string>
+
 </resources>
