--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -1,3 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
+    <!-- About phone screen, Everest OS version -->
+    <string name="about_device_name">Device</string>
+    <string name="everest_version">EverestOS version</string>
 </resources>
