Settings: Expose radio info (*#*#4636#*#*)
idoybh edits: Move to about phone in settings

Signed-off-by: Omkar Chandorkar <gotenksIN@aosip.dev>
Change-Id: I7cf1ee8685749212ddeee9b4e7135af3185f78b8
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>

--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -4,4 +4,8 @@
     <!-- About phone screen, Everest OS version -->
     <string name="about_device_name">Device</string>
     <string name="everest_version">EverestOS version</string>
+
+    <!-- Radio Info -->
+    <string name="radio_info_title">Radio info</string>
+
 </resources>
