--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -28,4 +28,6 @@
     <string name="copied_to_clipboard">Copied to clipboard</string>
     <string name="longpress_to_clipboard">Long-press to copy</string>
 
+    <!-- EverestOS  Maintainer -->
+    <string name="EverestOS_maintainer">Device Maintainer</string>
 </resources>
