--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -46,6 +46,14 @@
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.EverestVersionDetailPreferenceController"/>
 
+    <!-- EverestOS Maintainer -->
+    <Preference
+        android:key="EverestOS_maintainer"
+        android:title="@string/EverestOS_maintainer"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.EverestOSMaintainerPreferenceController"/>
+
     <!-- Security patch -->
     <Preference
         android:key="security_key"
