Settings: Enable freeform/multiple windows feature by default
Change-Id: Ifbe55f29c9ef57dfd49f9f156278848a01f49128
Signed-off-by: minaripenguin <alexfinhart@gmail.com>

--- a/res/xml/development_settings.xml
+++ b/res/xml/development_settings.xml
@@ -737,6 +737,7 @@
         <SwitchPreferenceCompat
             android:key="force_resizable_activities"
             android:title="@string/force_resizable_activities"
+            android:defaultValue="true"
             android:summary="@string/force_resizable_activities_summary" />
 
         <SwitchPreferenceCompat
@@ -745,6 +746,7 @@
 
         <SwitchPreferenceCompat
             android:key="enable_freeform_support"
+            android:defaultValue="true"
             android:title="@string/enable_freeform_support" />
 
         <SwitchPreferenceCompat
