--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -30,4 +30,10 @@
 
     <!-- EverestOS  Maintainer -->
     <string name="EverestOS_maintainer">Device Maintainer</string>
+
+    <!-- Per-app volume control -->
+    <string name="app_volume">App volume</string>
+    <string name="app_volume_title">Per-app volume control</string>
+    <string name="app_volume_summary">Allow to set different volume levels for each app</string>
+
 </resources>
