--- a/res/values/everest_config.xml
+++ b/res/values/everest_config.xml
@@ -1,3 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Show battery Design Capacity -->
+    <bool name="config_show_battery_design_capacity" translatable="false">true</bool>
+
+    <!-- Show battery Maximum Capacity -->
+    <bool name="config_show_battery_maximum_capacity" translatable="false">true</bool>
+
 </resources>
