Settings: Add BatteryDivider to fuelgauge
some devices with prebuilt kernel report, example 4mAh, instead of 4000mAh or whatever current mAh is.
add config to let override the divider

device tree example:
https://github.com/kamikaonashi/device_xiaomi_stone/commit/830a87b13941e60a1952c56fde57552fe2622d7f

Change-Id: Iea0aba69b473275c9a7616500f1ff1790f6ced80

--- a/res/values/everest_config.xml
+++ b/res/values/everest_config.xml
@@ -6,4 +6,7 @@
     <!-- Show battery Maximum Capacity -->
     <bool name="config_show_battery_maximum_capacity" translatable="false">true</bool>
 
+    <!-- Battery Info: mAh -->
+    <integer name="config_battery_divider" translatable="false">1000</integer>
+
 </resources>
