--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -140,4 +140,8 @@
     <string name="ime_default">Default</string>
     <string name="ime_hidden">Hidden</string>
 
+    <!-- Tweaks -->
+    <string name="tweaks_title">Tweaks</string>
+    <string name="tweaks_summary">Peak Customizations</string>
+
 </resources>
