--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -19,6 +19,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:key="top_level_settings">
+    
+    <com.android.settings.widget.HomepagePreference
+        android:fragment="com.android.tweaks.TweaksFragment"
+        android:icon="@drawable/ic_settings_everest"
+        android:key="top_level_tweaks"
+        android:order="9"
+        android:title="@string/tweaks_title"
+        android:summary="@string/tweaks_summary"
+        settings:controller="com.android.tweaks.TopLevelSettingsPreferenceController"/>
 
     <com.android.settings.widget.HomepagePreference
         android:fragment="com.android.settings.network.NetworkDashboardFragment"
