--- a/res/xml/top_level_settings_v2.xml
+++ b/res/xml/top_level_settings_v2.xml
@@ -56,6 +56,15 @@
         android:key="top_level_personalize_category"
         android:layout="@layout/settingslib_preference_category_no_title">
         <com.android.settings.widget.HomepagePreference
+            android:fragment="com.android.tweaks.TweaksFragment"
+            android:icon="@drawable/ic_settings_everest"
+            android:key="top_level_tweaks"
+            android:order="-61"
+            android:title="@string/tweaks_title"
+            android:summary="@string/tweaks_summary"
+            settings:controller="com.android.tweaks.TopLevelSettingsPreferenceController"/>
+
+        <com.android.settings.widget.HomepagePreference
             android:fragment="com.android.settings.applications.AppDashboardFragment"
             android:icon="@drawable/ic_apps_filled"
             android:key="top_level_apps"
