Settings: Integrate Tweaks into Settings
Change-Id: Id86228181a2ae84008a177d42d1fc94317eb2dc8
Co-authored-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -144,4 +144,8 @@
     <string name="compact_heads_up_notifications_enabled_title">Compact heads-up</string>
     <string name="compact_heads_up_notifications_enabled_summary">Display notifications in compact size</string>
 
+    <!-- Tweaks -->
+    <string name="tweaks_title">Tweaks</string>
+    <string name="tweaks_summary">Peak Customizations</string>
+
 </resources>
