Settings: Un-hide touchscreen_gesture_settings
* We will add more settings and hide device specific touchscreen gestures

Change-Id: Idd5db2906352910e74eea9f7e0b35752486ca3d0

--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -21,8 +21,7 @@
     android:title="@string/gesture_preference_title">
 
     <lineageos.preference.LineagePartsPreference
-        android:key="touchscreen_gesture_settings"
-        settings:requiresFeature="lineagehardware:FEATURE_TOUCHSCREEN_GESTURES" />
+        android:key="touchscreen_gesture_settings" />
 
     <lineageos.preference.RemotePreference
             android:key="device_touchscreen_gesture_settings"
