Settigs: Use custom prop for log tag [1/2]
* We do not use persist.log.tag as it's also resetted after reboot

Change-Id: I4455c04937c093cee493c63b836bebe44eb62498

--- a/res/xml/development_settings.xml
+++ b/res/xml/development_settings.xml
@@ -253,7 +253,7 @@
             android:entryValues="@array/select_logpersist_values" />
 
         <lineageos.preference.SystemPropertyListPreference
-            android:key="log.tag"
+            android:key="persist.sys.log.tag"
             android:title="@string/log_verbosity_title"
             android:entries="@array/log_verbosity_entries"
             android:entryValues="@array/log_verbosity_values"
